--- a/gb/21/10/18/n13311349.md
+++ b/gb/21/10/18/n13311349.md
@@ -1,19 +1,19 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/cfjqfm3646/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/cfjqfm3646/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/cfjqfm3646/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/cfjqfm3646/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/cfjqfm3646/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/hxcaik307/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/hxcaik307/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/hxcaik307/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/hxcaik307/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/hxcaik307/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>见证大法的神奇──婺剧演员朱媛珠的故事〈下〉</h2>
 <img width="600" src="https://i.epochtimes.com/assets/uploads/2021/10/id13323716-eb79b633349a8f27929792e472e96418-1-600x400.jpg" />
 <h6>法轮功学员朱媛珠感谢大法师父的救命之恩。（新唐人电视台）
 </h6>
 <hr>
-<p>【上文：<span style="color: #800080;"><a style="color: #800080;" href=><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/18/n13311345.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</a></span>】</p>
-<p>来自缙云的清纯美丽女子<ahref="https://github.com/cfjqfm3646/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>由于修炼法轮大法，遭受了中共七年关押和酷刑迫害，出狱后，山水依旧旖旎，美人容颜已毁。中共虽然摧毁了她的容颜，但是却无法撼动她坚定修炼大法的信念。出狱后，她经历了一场重大车祸，严重受伤，未经医治，28天后奇迹般地康复，堪称神奇，让我们跟随《<ahref="https://github.com/cfjqfm3646/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣和姜光宇继续去聆听缙云女子<ahref="https://github.com/cfjqfm3646/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>的传奇故事。</p>
+<p>【上文：<span style="color: #800080;"><a style="color: #800080;" href=><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311345.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</a></span>】</p>
+<p>来自缙云的清纯美丽女子<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>由于修炼法轮大法，遭受了中共七年关押和酷刑迫害，出狱后，山水依旧旖旎，美人容颜已毁。中共虽然摧毁了她的容颜，但是却无法撼动她坚定修炼大法的信念。出狱后，她经历了一场重大车祸，严重受伤，未经医治，28天后奇迹般地康复，堪称神奇，让我们跟随《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣和姜光宇继续去聆听缙云女子<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%9C%B1%E5%AA%9B%E7%8F%A0.md#1">朱媛珠</a>的传奇故事。</p>
 <h2><span style="color: #008000;">自己承受巨大痛苦 解脱肇事者牢狱之苦</span></h2>
-<p><strong><ahref="https://github.com/cfjqfm3646/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员朱媛珠</strong>：“我再三求我先生帮我洗掉头上的泥与血，我先生没办法只能帮我洗了。之后我开始试着坐下来，没法坐，痛得感到骨头都错开来，我就慢慢地挪，慢慢坐，把骨头好像挪正一点，减轻痛苦一点，坐的过程我大概用了40来分钟。</p>
+<p><strong><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员朱媛珠</strong>：“我再三求我先生帮我洗掉头上的泥与血，我先生没办法只能帮我洗了。之后我开始试着坐下来，没法坐，痛得感到骨头都错开来，我就慢慢地挪，慢慢坐，把骨头好像挪正一点，减轻痛苦一点，坐的过程我大概用了40来分钟。</p>
 <p>刚坐下来，那个骑摩托车的太太就找到我家了。她说：‘老板娘，我的先生被扣起来了，被关到拘留所里面去了。警察说，这事情太严重！一定要等你事情稳定以后，等你有个结果以后再放人，否则不能放人，可能还要判刑。你给我写一个保证，说你没事，我先生就能放出来，出来以后我们再调解。该怎么赔，我们再协商好不好？’”</p>
 <p>主持人宇欣：“这么严重的车祸，骨盆都给撞断了，可是这个肇事者的妻子却要求朱媛珠来写保证，证明她没有事，以此来释放他的丈夫。你觉得朱媛珠会这么做吗？”</p>
 <p>主持人姜光宇：“这让一般人看来是非常不合情理的，怎么可能！而且我们知道，骨盆骨折是车祸中的重伤，而且是机动车伤害事故中致死率最高的三大原因之一，致死率是30%左右。就可想而知，这给伤者所带来的那个伤痛，那是痛不欲生的，那么面对肇事者的妻子这样的一个请求，朱媛珠是怎么应对的呢？”</p>
-<p><strong><ahref="https://github.com/cfjqfm3646/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员朱媛珠</strong>：“我说：‘不要你赔，把你先生弄出来再说，我写个保证给你。’我先生就坚决反对：‘不行，怎么可以写保证？保证写了以后，你出了事情，以后的结果他不负责任了，跟他没有关系了，不能写保证！’</p>
+<p><strong><ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E6%B3%95%E8%BD%AE%E5%8A%9F.md#1">法轮功</a>学员朱媛珠</strong>：“我说：‘不要你赔，把你先生弄出来再说，我写个保证给你。’我先生就坚决反对：‘不行，怎么可以写保证？保证写了以后，你出了事情，以后的结果他不负责任了，跟他没有关系了，不能写保证！’</p>
 <p>“我又劝我先生：‘我们师父教我们做个好人，要为他人着想，不要给他人带来麻烦，我们就是要做个真正好人，要听师父的话。’把我先生工作做通以后，我就写给她了。</p>
 <p>“后来那个肇事者来了，哭着说：‘真的碰到活菩萨了！老板娘你怎么这么好啊？’</p>
 <p>“我说：‘不是我这么好，我如果不炼法轮功的话，我肯定不会这么好，肯定做不到。就是因为我炼法轮功，我们法轮功师父教我们做一个真正的好人，你也不是有意撞我的，对吧？我们也不能给你带来任何的麻烦，像你现在关进去以后，我也知道在里面是很苦的。’他非常感动。”</p>
@@ -51,55 +51,55 @@
 <p>主持人姜光宇：“那里有我们圆容不破的希望。”</p>
 <p>主持人宇欣：“请继续收看法轮大法神奇故事之五，我们下期节目时间再见！”</p>
 <p>主持人姜光宇：“再见！”◇</p>
-<figure id="attachment_13320473" aria-describedby="caption-attachment-13320473" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13320473-daa1022e6a457cde4f2b86626c9b14c8.jpg"><img class=" wp-image-13320473" src="https://i.epochtimes.com/assets/uploads/2021/10/id13320473-daa1022e6a457cde4f2b86626c9b14c8-450x253.jpg" alt="" width="601" b="338" /></a><figcaption id="caption-attachment-13320473" class="wp-caption-text">《<ahref="https://github.com/cfjqfm3646/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣。（新唐人电视台）</figcaption></figure>
+<figure id="attachment_13320473" aria-describedby="caption-attachment-13320473" style="width: 601px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13320473-daa1022e6a457cde4f2b86626c9b14c8.jpg"><img class=" wp-image-13320473" src="https://i.epochtimes.com/assets/uploads/2021/10/id13320473-daa1022e6a457cde4f2b86626c9b14c8-450x253.jpg" alt="" width="601" b="338" /></a><figcaption id="caption-attachment-13320473" class="wp-caption-text">《<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%E7%BB%86%E8%AF%AD%E4%BA%BA%E7%94%9F.md#1">细语人生</a>》节目主持人宇欣。（新唐人电视台）</figcaption></figure>
 <figure id="attachment_13323694" aria-describedby="caption-attachment-13323694" style="width: 598px" class="wp-caption aligncenter"><a target="_blank" href="https://i.epochtimes.com/assets/uploads/2021/10/id13323694-15cf5c396ea330b71d5c5f578ab29ef3.jpg"><img class=" wp-image-13323694" src="https://i.epochtimes.com/assets/uploads/2021/10/id13323694-15cf5c396ea330b71d5c5f578ab29ef3-450x239.jpg" alt="" width="598" b="318" /></a><figcaption id="caption-attachment-13323694" class="wp-caption-text">《细语人生》节目主持人姜光宇。（新唐人电视台）</figcaption></figure>
-<p>（点阅<ahref="https://github.com/cfjqfm3646/djy/blob/master/gb/tag/%e8%a6%8b%e8%ad%89%e5%a4%a7%e6%b3%95%e7%9a%84%e7%a5%9e%e5%a5%87.md#1">【见证大法的神奇】</a>系列文章。）</p>
+<p>（点阅<ahref="https://github.com/hxcaik307/djy/blob/master/gb/tag/%e8%a6%8b%e8%ad%89%e5%a4%a7%e6%b3%95%e7%9a%84%e7%a5%9e%e5%a5%87.md#1">【见证大法的神奇】</a>系列文章。）</p>
 <p>责任编辑：李梅#</p>
 
 <hr>
 
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/18/n13311345.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/4/n13279871.md#1">见证大法的神奇──李旻与刘庆的故事〈下〉</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/4/n13279344.md#1">见证大法的神奇──李旻与刘庆的故事〈上〉</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/7/25/n13113111.md#1">见证大法的神奇 第三集（下）</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/7/25/n13113105.md#1">见证大法的神奇 第三集（上）</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/6/27/n13049948.md#1">见证大法的神奇 第二集（下）</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/6/27/n13049947.md#1">见证大法的神奇 第二集（上）</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/6/5/n13001372.md#1">见证大法的神奇 第一集（下）</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/6/5/n13001368.md#1">见证大法的神奇 第一集（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/1/n13474190.md#1">一位总参办少校参谋的故事（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/1/1/n13474185.md#1">一位总参办少校参谋的故事（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/12/30/n13468191.md#1">从高傲到谦卑 台湾精神科医师的修炼故事</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311345.md#1">见证大法的神奇──婺剧演员朱媛珠的故事〈上〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/4/n13279871.md#1">见证大法的神奇──李旻与刘庆的故事〈下〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/10/4/n13279344.md#1">见证大法的神奇──李旻与刘庆的故事〈上〉</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/25/n13113111.md#1">见证大法的神奇 第三集（下）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/7/25/n13113105.md#1">见证大法的神奇 第三集（上）</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/21/6/27/n13049948.md#1">见证大法的神奇 第二集（下）</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank">善良女子被中共投男牢</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/8/12/n11446723.md#1" target="_blank">曹长青：美国成为唯一超强的秘密</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/24/n10804401.md#1" target="_blank">这些前中共警察所见证的奇迹</a></li>
+<li><a href="https://github.com/upjkzu3674/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank">大陆见不到的震撼场面</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/12/26/n11747470.md#1" target="_blank">为中共效力的红色特工 后来怎么样了（2）</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/20/1/9/n11780113.md#1" target="_blank">德国修炼者读《转法轮》见证神奇 受益良多</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/22/n13323324.md#1">【未解之谜】神探李昌钰 前世竟是他</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/21/n13321059.md#1">【百年真相】刑场上的婚礼 是杜撰还是历史？</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/17/n13310077.md#1">【人生之钥】他选了风水吉地 为何最后还是大破大败？</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/21/n13320995.md#1">【未解之谜】托梦破奇案 震惊英国</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/24/n13325390.md#1">【舞蹈三剑客】我们是如何加入神韵的？</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/27/n13334065.md#1">【古韵流芳】乌拉那拉氏 康熙亲选的儿媳</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/27/n13332353.md#1">练乙铮：中共激化国际矛盾 制造冷战局面</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/27/n13333907.md#1">【拍案惊奇】马斯克重登世界首富 许家印跌惨了</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/26/n13331373.md#1">2022年全球十所最佳大学排名</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/25/n13329347.md#1">【探索时分】台湾潜艇为何用锂电池？三大优势</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/26/n13329526.md#1">被问离婚后如何称呼冯绍峰 赵丽颖的回应获赞</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/26/n13329526.md#1">被问离婚后如何称呼冯绍峰 赵丽颖的回应获赞</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/25/n13329125.md#1">高圆圆肖像权案胜诉 其本名意外曝光</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/26/n13331051.md#1">李云迪与江薄隐秘关联 嫖娼被捕不寻常</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/26/n13331670.md#1">为电影每天练琴8小时 梁朝伟从厌学到爱上钢琴</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/27/n13334361.md#1">袁咏仪与网红直播带货 滤镜下五官变形引热议</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/25/n13327239.md#1">高丽菜加它防动脉硬化！5种食物搭配营养加倍</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/25/n13328431.md#1">高纤维助减肥健身 教你如何吃荞麦</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/26/n13331237.md#1">异位性皮肤炎发作抓不停？医师1招快速止痒</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/27/n13332712.md#1">新加工方法让木材像钢一样坚硬 却不会生锈</a></li>
-<li><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/25/n13327820.md#1">少吃也没瘦？6种燃脂食物加1运动 打破停滞期</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/14/n13576716.md#1">【百年真相】亲历者揭秘“1952细菌战”真相</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/25/n13605590.md#1">【未解之谜】地球磁极倒转进行中??</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610168.md#1">【神韵作品】唐瑞讲故事｜朗读｜小熊维尼第一章</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/22/n13597113.md#1">【百年真相】现代文字狱 胡风如何成了反革命？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/17/n13582752.md#1">【奇事】两位卜算大师看出对方死期 但两人皆无法避过</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614863.md#1">《梁祝》小提琴协奏曲</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/2/n13616642.md#1">【新闻大家谈】“取胜三关键”俄乌各占几成？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13613897.md#1">【十字路口】锁链女遭拐卖凌虐 幕后大黑手曝光？</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607661.md#1">【更新2.27】乌总统：接下来24小时至关重要</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13610320.md#1">乌克兰用无人机摧毁俄导弹系统 视频曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609576.md#1">俄银行被切断SWIFT系统 中共角色更尴尬</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609572.md#1">纳豆或暂退萤光幕一年 经纪人曝他最新病况</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13609465.md#1">看海狮资料一目十行过目不忘 杨幂展超强记忆力</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614888.md#1">赴韩拍戏皮肤长满红斑 范冰冰素颜照吓坏网友</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612216.md#1">港星吴孟达过世一周年 长眠大马原因曝光</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/3/1/n13614510.md#1">香港TVB艺人祝文君罹癌离世 终年55岁</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/28/n13612112.md#1">更强Omicron变种出现？致病性、传播力一次看</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/23/n13599631.md#1">疫苗、口罩难结束疫情 这一件事或成关键</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/26/n13607140.md#1">睡眠十大好处 提高脑力、抗衰老都在内</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13608014.md#1">多吃橙色食物 不只护眼 还有这些强大好处</a></li>
+<li><a href="https://github.com/hxcaik307/djy/blob/master/gb/22/2/27/n13607982.md#1">迷走神经：最长脑神经 刺激它能让你更健康</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/cfjqfm3646/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/cfjqfm3646/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13311349.htm">见证大法的神奇──婺剧演员朱媛珠的故事〈下〉</a></p><hr>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/hxcaik307/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/21/10/18/n13311349.htm">见证大法的神奇──婺剧演员朱媛珠的故事〈下〉</a></p><hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/cfjqfm3646/djy/blob/master/gb/21/10/18/n13311349.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/cfjqfm3646/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/cfjqfm3646/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/cfjqfm3646/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/cfjqfm3646/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/hxcaik307/djy/blob/master/gb/21/10/18/n13311349.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/hxcaik307/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/hxcaik307/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/hxcaik307/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
